WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163272
[Win] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=163272
Summary
[Win] Compile fix.
Per Arne Vollan
Reported
2016-10-11 02:05:57 PDT
On some older SDKs, I get the following compile error: Source\WebCore\platform\spi\win\CoreTextSPIWin.h(44): error C2365: 'kCTFontTableOptionNoOptions': redefinition; previous definition was 'enumerator'
Attachments
Patch
(1.90 KB, patch)
2016-10-11 02:18 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-10-11 02:18:56 PDT
Created
attachment 291243
[details]
Patch
Per Arne Vollan
Comment 2
2016-10-11 02:52:25 PDT
<
rdar://problem/28453359
>
WebKit Commit Bot
Comment 3
2016-10-11 07:12:26 PDT
Comment on
attachment 291243
[details]
Patch Clearing flags on attachment: 291243 Committed
r207136
: <
http://trac.webkit.org/changeset/207136
>
WebKit Commit Bot
Comment 4
2016-10-11 07:12:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug