[Win] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=163272

Reviewed by Brent Fulgham.

When compiling with older SDKs, some CoreText symbols are redefined.
This patch checks if the relevant CoreText header file has been
included before defining the symbol.

* platform/spi/win/CoreTextSPIWin.h:


Canonical link: https://commits.webkit.org/181105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207136 268f45cc-cd09-0410-ab3c-d52691b4dbfc